--- a/src/main/resources/com/mycompany/java/client/project/loginPage.fxml
+++ b/src/main/resources/com/mycompany/java/client/project/loginPage.fxml
@@ -14,7 +14,7 @@
         <VBox alignment="TOP_CENTER" maxHeight="382.0" maxWidth="390.0" prefHeight="382.0" prefWidth="390.0" spacing="15.0" styleClass="login-container">
             <children>
                 <Label alignment="CENTER" prefHeight="35.0" prefWidth="326.0" styleClass="login-title" text="Login" />
-
+                
                 <VBox alignment="CENTER_LEFT" spacing="5.0" styleClass="form-section">
                     <children>
                         <Label graphicTextGap="8.0" styleClass="field-label" text="Username" />
@@ -24,33 +24,50 @@
                         <Insets left="18.0" right="18.0" />
                     </VBox.margin>
                 </VBox>
-
+                
                 <VBox alignment="CENTER_LEFT" spacing="5.0" styleClass="form-section">
                     <children>
                         <Label styleClass="field-label" text="Password" />
-                        <PasswordField fx:id="passwordField" prefHeight="36.0" prefWidth="358.0" styleClass="password-field" />
+                        <StackPane>
+                            <children>
+                                <PasswordField fx:id="passwordField" prefHeight="36.0" prefWidth="358.0" styleClass="password-field" />
+                                <TextField fx:id="passwordTextField" managed="false" prefHeight="36.0" prefWidth="358.0" styleClass="password-field" visible="false" />
+                                <Button fx:id="togglePasswordButton" onAction="#togglePasswordVisibility" prefHeight="30.0" prefWidth="45.0" styleClass="visibility-button" text="👁" StackPane.alignment="CENTER_RIGHT">
+                                    <StackPane.margin>
+                                        <Insets right="5.0" />
+                                    </StackPane.margin>
+                                </Button>
+                            </children>
+                        </StackPane>
                     </children>
                     <VBox.margin>
                         <Insets left="18.0" right="18.0" />
                     </VBox.margin>
                 </VBox>
-
+                
                 <HBox alignment="CENTER" spacing="10.0">
                     <VBox.margin>
                         <Insets top="5.0" />
                     </VBox.margin>
                 </HBox>
-
-                <Button fx:id="loginButton" prefHeight="33.0" prefWidth="94.0" styleClass="login-button" text="Login" />
-
+                
+                <Button fx:id="loginButton" onAction="#handleLogin" prefHeight="42.0" prefWidth="214.0" styleClass="login-button" text="Login" />
+                
                 <HBox alignment="CENTER" spacing="10.0" />
-
-                <Button fx:id="createAccountButton" onAction="#navigateToRegister" prefHeight="38.0" prefWidth="150.0" styleClass="secondary-button" text="Create an account" />
+                
+                <Button fx:id="createAccountButton" onAction="#navigateToRegister" prefHeight="48.0" prefWidth="218.0" styleClass="secondary-button" text="Create an account" />
             </children>
-
+            
             <padding>
                 <Insets bottom="20.0" left="0" right="0" top="20.0" />
             </padding>
         </VBox>
+        
+        <!-- Back to Home Button - Top Left of Screen -->
+        <Button fx:id="backToHomeButton" onAction="#navigateToHome" styleClass="back-button" text="← Back" StackPane.alignment="TOP_LEFT">
+            <StackPane.margin>
+                <Insets left="20.0" top="20.0" />
+            </StackPane.margin>
+        </Button>
     </children>
 </StackPane>
