--- a/src/main/resources/com/mycompany/java/client/project/registerPage.fxml
+++ b/src/main/resources/com/mycompany/java/client/project/registerPage.fxml
@@ -46,7 +46,6 @@
                                 <FXCollections fx:factory="observableArrayList">
                                     <String fx:value="Male" />
                                     <String fx:value="Female" />
-                                    <String fx:value="Other" />
                                 </FXCollections>
                             </items>
                         </ComboBox>
@@ -62,11 +61,11 @@
                     </VBox.margin>
                 </HBox>
 
-                <Button fx:id="registerButton" prefHeight="33.0" prefWidth="94.0" styleClass="register-button" text="Register" />
+                <Button fx:id="registerButton" onAction="#handleRegister" prefHeight="43.0" prefWidth="208.0" styleClass="register-button" text="Register" />
 
                 <HBox alignment="CENTER" spacing="10.0" />
 
-                <Button fx:id="backToLoginButton" onAction="#navigateToLogin" prefHeight="38.0" prefWidth="150.0" styleClass="secondary-button" text="Back to Login" />
+                <Button fx:id="backToLoginButton" onAction="#navigateToLogin" prefHeight="51.0" prefWidth="207.0" styleClass="secondary-button" text="Back to Login" />
             </children>
 
             <padding>
@@ -75,7 +74,7 @@
         </VBox>
 
         <!-- Back to Home Button - Top Left of Screen -->
-        <Button fx:id="backToHomeButton" onAction="#navigateToHome" styleClass="back-button" text="← Back" StackPane.alignment="TOP_LEFT">
+        <Button fx:id="backToHomeButton" onAction="#navigateToLogin" styleClass="back-button" text="← Back" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
                 <Insets left="20.0" top="20.0" />
             </StackPane.margin>
