--- a/src/main/resources/com/mycompany/java/client/project/GameBoardPage.fxml
+++ b/src/main/resources/com/mycompany/java/client/project/GameBoardPage.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -17,7 +18,6 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="600.0" prefWidth="900.0" styleClass="main-container" stylesheets="@/styles/GameBoard.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.java.client.project.GameBoardController">
-    <!-- Left Panel: Stats -->
     <left>
         <VBox prefWidth="240.0" spacing="20" styleClass="stats-container">
             <padding>
@@ -50,53 +50,51 @@
         </VBox>
     </left>
 
-    <!-- Center Panel: Game Area -->
     <center>
         <VBox alignment="CENTER" spacing="10">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <!-- Player 1 Card -->
-            <HBox alignment="CENTER_LEFT" spacing="15" styleClass="player-card-container full-width player1-card">
+            <HBox alignment="CENTER_LEFT" spacing="15" styleClass="player-card-container, full-width, player1-card">
                 <padding>
                     <Insets bottom="10" left="15" right="15" top="10" />
                 </padding>
-                <StackPane>
-                    <Circle fill="TRANSPARENT" opacity="0.3" radius="28" stroke="#2e5bff" strokeWidth="1" />
-                    <Circle fx:id="player1Avatar" radius="25" stroke="#2e5bff" strokeWidth="2" styleClass="avatar-fancy" />
-                    <Circle fill="#00ff88" radius="5" stroke="#0d0d17" strokeWidth="2" StackPane.alignment="BOTTOM_RIGHT">
-                        <StackPane.margin>
-                            <Insets bottom="2" right="2" />
-                        </StackPane.margin>
-                        <effect>
-                            <DropShadow color="#00ff88" radius="10" spread="0.8" />
-                        </effect>
-                    </Circle>
+                <StackPane fx:id="player1Container" styleClass="avatar-turn-container">
+                    <StackPane>
+                        <Circle fill="TRANSPARENT" opacity="0.3" radius="28" stroke="#2e5bff" strokeWidth="1" />
+                        <Circle fx:id="player1Avatar" radius="25" stroke="#2e5bff" strokeWidth="2" styleClass="avatar-fancy" />
+                        <Circle fill="#00ff88" radius="5" stroke="#0d0d17" strokeWidth="2" StackPane.alignment="BOTTOM_RIGHT">
+                            <StackPane.margin>
+                                <Insets bottom="2" right="2" />
+                            </StackPane.margin>
+                            <effect>
+                                <DropShadow color="#00ff88" radius="10" spread="0.8" />
+                            </effect>
+                        </Circle>
+                    </StackPane>
                 </StackPane>
                 <VBox alignment="CENTER_LEFT">
                     <Label fx:id="player1Name" style="-fx-font-weight: bold; -fx-font-size: 15px;" text="Sova" textFill="WHITE" />
                     <HBox>
-                        <children>
-                            <Label fx:id="player1Score" style="-fx-font-weight: bold;" text="Score : " textFill="#2e5bff" />
-                            <Label fx:id="player1Rank" style="-fx-font-weight: bold;" text="0" textFill="#2e5bff" />
-                        </children>
+                        <Label style="-fx-font-weight: bold;" text="Score : " textFill="#2e5bff" />
+                        <Label fx:id="player1Score" style="-fx-font-weight: bold;" text="0" textFill="#2e5bff" />
                     </HBox>
                 </VBox>
             </HBox>
+         <TextField alignment="CENTER" prefHeight="26.0" prefWidth="374.0" text=" Player-X Turn" VBox.vgrow="ALWAYS" />
 
-            <!-- Game Grid -->
             <StackPane fx:id="gameArea" VBox.vgrow="ALWAYS">
                 <GridPane fx:id="gridPane" alignment="CENTER" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" styleClass="game-grid" vgap="10">
-                    <Button fx:id="btn00" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
-                    <Button fx:id="btn01" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
-                    <Button fx:id="btn02" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
-                    <Button fx:id="btn10" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                    <Button fx:id="btn11" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                    <Button fx:id="btn12" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                    <Button fx:id="btn20" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                    <Button fx:id="btn21" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                    <Button fx:id="btn22" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                    <Button fx:id="btn00" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                    <Button fx:id="btn01" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <Button fx:id="btn02" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+                    <Button fx:id="btn10" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                    <Button fx:id="btn11" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Button fx:id="btn12" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    <Button fx:id="btn20" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                    <Button fx:id="btn21" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <Button fx:id="btn22" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" prefWidth="90.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" prefWidth="90.0" />
@@ -108,40 +106,38 @@
                         <RowConstraints minHeight="90.0" prefHeight="90.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                 </GridPane>
-                <Pane fx:id="gridOverlay" pickOnBounds="false" mouseTransparent="true" />  
+                <Pane fx:id="gridOverlay" mouseTransparent="true" pickOnBounds="false" />  
             </StackPane>
 
-            <!-- Player 2 Card -->
-            <HBox alignment="CENTER_RIGHT" spacing="15" styleClass="player-card-container full-width player2-card">
+            <HBox alignment="CENTER_RIGHT" spacing="15" styleClass="player-card-container, full-width, player2-card">
                 <padding>
                     <Insets bottom="10" left="15" right="15" top="10" />
                 </padding>
                 <VBox alignment="CENTER_RIGHT">
                     <Label fx:id="player2Name" style="-fx-font-weight: bold; -fx-font-size: 15px;" text="Sage" textFill="WHITE" />
                     <HBox>
-                        <children>
-                            <Label fx:id="player2Rank" style="-fx-font-weight: bold;" text="Score : " textFill="#ff5e7e" />
-                            <Label fx:id="player2Score1" layoutX="10.0" layoutY="10.0" style="-fx-font-weight: bold;" text="0" textFill="#ff5e7e" />
-                        </children>
+                        <Label style="-fx-font-weight: bold;" text="Score : " textFill="#ff5e7e" />
+                        <Label fx:id="player2Score" style="-fx-font-weight: bold;" text="0" textFill="#ff5e7e" />
                     </HBox>
                 </VBox>
-                <StackPane>
-                    <Circle fill="TRANSPARENT" opacity="0.3" radius="28" stroke="#ff5e7e" strokeWidth="1" />
-                    <Circle fx:id="player2Avatar" radius="25" stroke="#ff5e7e" strokeWidth="2" styleClass="avatar-fancy-p2" />
-                    <Circle fill="#00ff88" radius="5" stroke="#0d0d17" strokeWidth="2" StackPane.alignment="BOTTOM_LEFT">
-                        <StackPane.margin>
-                            <Insets bottom="2" left="2" />
-                        </StackPane.margin>
-                        <effect>
-                            <DropShadow color="#00ff88" radius="10" spread="0.8" />
-                        </effect>
-                    </Circle>
+                <StackPane fx:id="player2Container" styleClass="avatar-turn-container">
+                    <StackPane>
+                        <Circle fill="TRANSPARENT" opacity="0.3" radius="28" stroke="#ff5e7e" strokeWidth="1" />
+                        <Circle fx:id="player2Avatar" radius="25" stroke="#ff5e7e" strokeWidth="2" styleClass="avatar-fancy-p2" />
+                        <Circle fill="#00ff88" radius="5" stroke="#0d0d17" strokeWidth="2" StackPane.alignment="BOTTOM_LEFT">
+                            <StackPane.margin>
+                                <Insets bottom="2" left="2" />
+                            </StackPane.margin>
+                            <effect>
+                                <DropShadow color="#00ff88" radius="10" spread="0.8" />
+                            </effect>
+                        </Circle>
+                    </StackPane>
                 </StackPane>
             </HBox>
         </VBox>
     </center>
 
-    <!-- Right Panel: Spectators -->
     <right>
         <VBox prefWidth="220.0" spacing="15" styleClass="spectators-container">
             <padding>
