--- a/src/main/resources/com/mycompany/java/client/project/recordedGames.fxml
+++ b/src/main/resources/com/mycompany/java/client/project/recordedGames.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" styleClass="root" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.java.client.project.RecordedGamesController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" styleClass="root" stylesheets="@styles/recorded-games.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.java.client.project.RecordedGamesController">
     
     <HBox alignment="CENTER_LEFT" spacing="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
         <Button fx:id="backButton" onAction="#handleBack" styleClass="back-button" text="← Back" />
