--- a/src/main/resources/com/mycompany/java/client/project/homePage.fxml
+++ b/src/main/resources/com/mycompany/java/client/project/homePage.fxml
@@ -28,13 +28,11 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0" styleClass="top-bar">
                             <children>
                                 <Label styleClass="welcome-text" text="Welcome, Guest!" />
-                                <Button onAction="#navigateToLoginPage" styleClass="login_button" text="Login" />
+                                <Button fx:id="loginButton" onAction="#navigateToLoginPage" styleClass="login_button" text="Login" />
                                 <Region HBox.hgrow="ALWAYS" />
-                                <Label styleClass="status-text" text="Status: Offline" />
+                                <Label fx:id="statusText" styleClass="status-text" text="Status: Offline" />
                             </children>
                         </HBox>
-
-                        <Region prefWidth="490.0" VBox.vgrow="ALWAYS" />
 
                         <StackPane styleClass="logo-container">
                             <children>
@@ -44,28 +42,38 @@
 
                         <VBox alignment="CENTER" maxWidth="350.0" spacing="12.0" styleClass="menu-buttons" VBox.vgrow="SOMETIMES">
                             <children>
-                                <Button maxWidth="Infinity" onAction="#navigateToOnlineGameBoardPage" text="Quick Game" />
-                                <Button maxWidth="Infinity" onAction="#navigateToLocalMultiplayer" text="Local Multiplayer" />
-                                <Button maxWidth="Infinity" onAction="#onPlayVsPcClicked" text="Play vs Computer" />
-                                <Button maxWidth="Infinity" text="Recorded Games" />
+                                <Button fx:id="quickGameButton" maxWidth="Infinity" onAction="#navigateToOnlineGameBoardPage" text="Quick Game" />
+                                <Button fx:id="localMultiplayerButton" maxWidth="Infinity" onAction="#navigateToLocalMultiplayer" text="Local Multiplayer" />
+                                <Button fx:id="PlayVsComputerButton" maxWidth="Infinity" onAction="#onPlayVsPcClicked" text="Play vs Computer" />
+                                <Button fx:id="recordedGamesButton" maxWidth="Infinity" text="Recorded Games" />
                             </children>
                         </VBox>
+                        <HBox prefHeight="25.0" prefWidth="490.0">
+                            <children>
+                                <Button onAction="#onChangeIP" fx:id="changeIPButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="83.0" styleClass="change-ip-button" text="Change Ip" HBox.hgrow="NEVER" />
+                                <Region prefHeight="18.0" prefWidth="416.0" HBox.hgrow="ALWAYS" />
+                            </children>
+                        </HBox>
                     </children>
                 </VBox>
 
-                <GridPane prefWidth="320.0" styleClass="side-panel" vgap="10.0">
+                <GridPane fx:id="sidePanel" prefWidth="320.0" styleClass="side-panel" vgap="10.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="40.0" vgrow="NEVER" /> <RowConstraints minHeight="100.0" vgrow="ALWAYS" /> <RowConstraints minHeight="40.0" vgrow="NEVER" /> <RowConstraints minHeight="100.0" vgrow="ALWAYS" /> </rowConstraints>
+                        <RowConstraints minHeight="40.0" vgrow="NEVER" /> 
+                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" /> 
+                        <RowConstraints minHeight="40.0" vgrow="NEVER" /> 
+                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" /> 
+                    </rowConstraints>
                     
                     <children>
                         <Label styleClass="section-title" text="Players Available" GridPane.rowIndex="0" />
-                        <ListView fx:id="roomsList" styleClass="custom-list" GridPane.rowIndex="1" />
+                        <ListView fx:id="onlinePlayersList" styleClass="custom-list" GridPane.rowIndex="1" />
 
                         <Label styleClass="section-title" text="Leaderboard" GridPane.rowIndex="2" />
-                        <ListView fx:id="recordedGamesList" styleClass="custom-list" GridPane.rowIndex="3" />
+                        <ListView fx:id="leaderboardList" styleClass="custom-list" GridPane.rowIndex="3" />
                     </children>
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
