--- a/src/main/resources/com/mycompany/java/client/project/GameBoardPage.fxml
+++ b/src/main/resources/com/mycompany/java/client/project/GameBoardPage.fxml
@@ -86,15 +86,15 @@
 
             <StackPane fx:id="gameArea" VBox.vgrow="ALWAYS">
                 <GridPane fx:id="gridPane" alignment="CENTER" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" styleClass="game-grid" vgap="10">
-                    <Button fx:id="btn00" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                    <Button fx:id="btn01" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                    <Button fx:id="btn02" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-                    <Button fx:id="btn10" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                    <Button fx:id="btn11" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                    <Button fx:id="btn12" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                    <Button fx:id="btn20" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                    <Button fx:id="btn21" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                    <Button fx:id="btn22" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                    <Button fx:id="btn00" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"  GridPane.valignment="CENTER" />
+                    <Button fx:id="btn01" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"  GridPane.valignment="CENTER"/>
+                    <Button fx:id="btn02" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.halignment="CENTER"  GridPane.valignment="CENTER"/>
+                    <Button fx:id="btn10" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.halignment="CENTER"  GridPane.valignment="CENTER"/>
+                    <Button fx:id="btn11" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.halignment="CENTER"  GridPane.valignment="CENTER"/>
+                    <Button fx:id="btn12" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.halignment="CENTER"  GridPane.valignment="CENTER"/>
+                    <Button fx:id="btn20" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.halignment="CENTER"  GridPane.valignment="CENTER"/>
+                    <Button fx:id="btn21" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.halignment="CENTER"  GridPane.valignment="CENTER"/>
+                    <Button fx:id="btn22" onAction="#handleMove" prefHeight="90" prefWidth="90" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.halignment="CENTER"  GridPane.valignment="CENTER"/>
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" prefWidth="90.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" prefWidth="90.0" />
